added note for review

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 
     </section>
 
+    <!--NOTE TO REVIEWER: After completion of the project, I learned I was working off the wrong figma project specs, so had to make edits to match the correct one.  I left the video and comments section in, just in case, but have it set to not display.  I was awaiting a response from the forum to make sure they are not supposed to be in the project, before I deleted. Thanks for your understanding. -->
+
     <section class="video section">
       <h2 class="content-title">Cycling & Spouting</h2>
       <p class="content-subtitle">The largest bike-touring event in the world and the most famous geyser of Yellowstone National Park</p>
