corrections from 2nd review

--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
   <div class="page__container">
 
     <header class="header section section_narrow">
-      <nav class="header__columns">
         <img class="header__logo" src="./images/logo.svg" alt="logo" >
         <ul class="header__links-wrap">
           <li><a href="#" class="header__link header__link_active page__link">En</a></li>
           <li><a href="#" class="header__link page__link">Es</a></li>
         </ul>
-      </nav>
     </header>
-<!-- NOTE TO REVIEWER: Thank you for your help.  I'm working really hard to learn and you are very encouraging and I have learned a lot from you too.  Thank you for everything! I struggled with the places section. I hope I did well.  It was difficult, but I think I finally got it! . -->
 
   <main class="content page__content">
 
@@ -48,21 +45,22 @@
 
     </section>
 
-    <section class="photo-grid section">
+    <section class="section">
 
-      <img class="photo-grid__item" src="./images/photo-grid-highway.jpg" alt="highway">
-      <img class="photo-grid__item" src="./images/photo-grid-lake.jpg" alt="lake">
-      <img class="photo-grid__item" src="./images/photo-grid-seagulls.jpg" alt="seagulls">
-      <img class="photo-grid__item" src="./images/photo-grid-boise.jpg" alt="Boise, Idaho">
-      <img class="photo-grid__item" src="./images/photo-grid-fog.jpg" alt="fog">
-      <img class="photo-grid__item" src="./images/photo-grid-valley.jpg" alt="valley">
-      <img class="photo-grid__item" src="./images/photo-grid-pass.jpg" alt="pass">
-      <img class="photo-grid__item" src="./images/photo-grid-twig.jpg" alt="twig">
-      <img class="photo-grid__item" src="./images/photo-grid-clouds.jpg" alt="clouds">
-      <img class="photo-grid__item" src="./images/photo-grid-oasis.jpg" alt="oasis">
-      <img class="photo-grid__item" src="./images/photo-grid-wires.jpg" alt="wires">
-      <img class="photo-grid__item" src="./images/photo-grid-road.jpg" alt="road">
-
+      <ul class="photo-grid">
+        <li><img class="photo-grid__item" src="./images/photo-grid-highway.jpg" alt="highway"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-lake.jpg" alt="lake"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-seagulls.jpg" alt="seagulls"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-boise.jpg" alt="Boise, Idaho"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-fog.jpg" alt="fog"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-valley.jpg" alt="valley"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-pass.jpg" alt="pass"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-twig.jpg" alt="twig"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-clouds.jpg" alt="clouds"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-oasis.jpg" alt="oasis"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-wires.jpg" alt="wires"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-road.jpg" alt="road"></li>
+      </ul>
     </section>
 
     <section class="places section section_narrow">
